crates/aviutl2-macros/src/snapshots/aviutl2_macros__module_metatable__tests__direct_gc.snap
---
source: crates/aviutl2-macros/src/module_metatable.rs
assertion_line: 136
expression: format_tokens(output)
---
impl UserData {
    fn gc(&mut self, handle: &mut ::aviutl2::module::ScriptModuleCallHandle) {
        let _ = handle;
        self.close();
    }
}
::aviutl2::__internal_module! {
    impl ::aviutl2::module::ScriptModuleUserData for UserData {
        const META_METHOD_FUNCTIONS: &'static [::aviutl2::sys::module2::META_METHOD_FUNCTION] = &[
            ::aviutl2::sys::module2::META_METHOD_FUNCTION {
                method: concat!("__gc", "\0").as_ptr() as *const ::std::os::raw::c_char,
                func: bridge_gc,
            },
            ::aviutl2::sys::module2::META_METHOD_FUNCTION {
                method: ::std::ptr::null(),
                func: __meta_table_dummy_method,
            },
        ];
    }
    unsafe extern "C" fn __meta_table_dummy_method(
        _smp: *mut ::aviutl2::sys::module2::SCRIPT_MODULE_PARAM,
    ) {
    }
    unsafe extern "C" fn bridge_gc(smp: *mut ::aviutl2::sys::module2::SCRIPT_MODULE_PARAM) {
        if let Err(panic_info) = ::aviutl2::__catch_unwind_with_panic_info(|| {
            let mut __handle = unsafe { ::aviutl2::module::ScriptModuleCallHandle::from_raw(smp) };
            {
                let __userdata =
                    unsafe { &*((*smp).userdata as *const ::std::sync::Mutex<UserData>) };
                let mut __userdata = __userdata
                    .lock()
                    .expect("script module meta table userdata mutex poisoned");
                let __internal_self = &mut *__userdata;
                let () = <UserData>::gc(__internal_self, &mut __handle);
            }
            unsafe {
                let _ = ::std::sync::Arc::from_raw(
                    (*smp).userdata as *const ::std::sync::Mutex<UserData>,
                );
            }
        }) {
            ::aviutl2::tracing::error!("Panic occurred during {}: {}", "gc", panic_info);
            let _ = ::aviutl2::logger::write_error_log(&panic_info);
        }
    }
}
